--- a/src/resume.tex
+++ b/src/resume.tex
@@ -4,7 +4,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % -------------- README --------------
-% - All text to be printed is to be placed between curly braces {} (This helps in escaping special characters)
+% - All text to be printed is to be placed between curly braces {} (This helps in parsing special characters)
 % - two backslashes (\\) represent new line (Notice that the last item in a list does not end with a new line)
 
 % -------------- Resume ---------------
@@ -12,13 +12,13 @@
 
 \begin{document}
 
-% --------- Name & Contact -----------
+% --------- Contact Information -----------
 \introduction[
-    fullname=Sparky sundevil8,
-    email=sparky.sundevil@asu.edu,
-    phone=602-555-1212,
-    linkedin=linkedin.com/in/sparkysundevil,
-    github=github.com/sparkysundevil
+    fullname={Sparky sundevil8},
+    email={sparky.sundevil@asu.edu},
+    phone={602-555-1212},
+    linkedin={linkedin.com/in/sparkysundevil},
+    github={github.com/sparkysundevil}
 ]
 
 % --------- Summary -----------
@@ -92,7 +92,7 @@
     \begin{itemize}
         \vspace{-0.5em}
         \itemsep -6pt {}
-        \item Developed team schedule, including quality measurement for each major milestone (Microsoft Project
+        \item Developed team schedule, including quality measurement for each major milestone (Microsoft Project)
         \item Ensured team compliance to Design Control Procedures according to Code of Federal Regulations (CFR)
         \item Recognized by faculty audience as “Best Presentation” out of 15 teams
     \end{itemize}
