--- a/src/resume.tex
+++ b/src/resume.tex
@@ -4,8 +4,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % -------------- README --------------
-% - All text to be printed is to be placed between curly braces {} (This helps in parsing special characters)
-% - two backslashes (\\) represent new line (Notice that the last item in a list does not end with a new line)
+% Visit https://github.com/vgnshiyer/ASU-sparkysundevil-resume-template for comprehensive documenation.
 
 % -------------- Resume ---------------
 \documentclass{resume}
@@ -15,8 +14,8 @@
 % --------- Contact Information -----------
 \introduction[
     fullname={Sparky sundevil8},
-    email={sparky.sundevil@asu.edu},
-    phone={602-555-1212},
+    email={sdevil123@asu.edu},
+    phone={123-456-7890},
     linkedin={linkedin.com/in/sparkysundevil},
     github={github.com/sparkysundevil}
 ]
@@ -57,15 +56,15 @@
 % --------- Experience -----------
 \begin{experienceSection}{Professional Experience}
     \experienceItem[
-        company={Stryker Sustainability Solutions},
-        location={Tempe, AZ},
+        company={Stryker Solutions},
+        location={Phoenix, AZ},
         position={Research \& Dev Development Intern},
         duration={May 2019 – Aug 2019}
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Performed database administration of PostgreSQL database on cloud, responsible for actively serving over 200 live microservices across 3 AWS regions.
-        \item Developed a custom java application for encrypting and migrating data with in-flight encryption from on-premise databases to Kafka, responsible for migrating over 100 million transaction records/minute.
+        \item Applied measurement system analysis (MSA) to qualify relocated test equipment (JMP, Python)
+        \item Authored three technical reports for relocated packaging equipment, following IQOQPQ guides (JMP, Excel)
     \end{itemize}
 
     \experienceItem[
