--- a/src/resume.tex
+++ b/src/resume.tex
@@ -24,14 +24,16 @@
 \summary{Senior mechanical engineering student with internship experience in medical device manufacturing and product development. Project experience includes applications of software and hardware. Seeking full-time position May 2020 in medical device manufacturing, pharmaceutical production, and other FDA-regulated industries. }
 
 % --------- Education ---------
-\education[
-    university={Arizona State University, Tempe, AZ},
-    college={Barrett, The Honors College},
-    graduation={May 2020},
-    grade={3.82 GPA},
-    program={B.S.E., Mechanical Engineering},
-    coursework={Hardware Design Languages and Programmable Logic, Advanced Excel in Business},
-]
+\begin{educationSection}{Education}
+    \educationItem[
+        university={Arizona State University, Tempe, AZ},
+        college={Barrett, The Honors College},
+        graduation={May 2020},
+        grade={3.82 GPA},
+        program={B.S.E., Mechanical Engineering},
+        coursework={Hardware Design Languages and Programmable Logic, Advanced Excel in Business},
+    ]
+\end{educationSection}
 
 % --------- Skills -----------
 \begin{skillsSection}{Technical Skills}
@@ -118,7 +120,7 @@
         duration={Aug 2018 – May 2019}
     ]
     \begin{itemize}
-        \vspace{-0.5em}
+        \vspace{-0.2em}
         \itemsep -6pt {}
         \item Tutored 10-15 undergraduate engineering students per week in MATLAB programming and math coursework
     \end{itemize}
@@ -130,7 +132,7 @@
         duration={Aug 2017 – Dec 2017}
     ]
     \begin{itemize}
-        \vspace{-0.5em}
+        \vspace{-0.2em}
         \itemsep -6pt {}
         \item Achieved \#2 highest selling associate within one month of hire date
     \end{itemize}
